--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "First Step"
   location         : "Seoul"
-  email            : "qptjtt@gmail.com"
+  email            : 
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
